--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -44,7 +44,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "df = pd.read_csv('/content/drive/MyDrive/kì 2/tien xu li & xay dung bo du lieu/BTTH5_DS108/clean_data.csv')\n"
+        "df = pd.read_csv('/content/drive/MyDrive/clean_data.csv')\n"
       ],
       "metadata": {
         "id": "rlia2rto0wSg"
